manifiesto/objects/Asignacion_de_productos__c.object
<CustomObject>
    <description>Determina la relación entre Productos, Centro Logístico y Centro de beneficio.</description>
    <fields>
        <fullName>Centro_Logistico__c</fullName>
        <label>Centro Logístico</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1031 - Quilicura - Oxiquim S.A.</fullName>
                </value>
                <value>
                    <fullName>1034 - Oxiquim Centro Norte Propios Ext. - Oxiquim S.A.</fullName>
                </value>
                <value>
                    <fullName>1041 - Puerto Montt - Oxiquim S.A.</fullName>
                </value>
                <value>
                    <fullName>1050 - Trading - Oxiquim S.A.</fullName>
                </value>
                <value>
                    <fullName>1051 - Terminal Marítimo Quintero - Oxiquim S.A.</fullName>
                </value>
                <value>
                    <fullName>1061- Escuadrón - Oxiquim S.A.</fullName>
                </value>
                <value>
                    <fullName>1062 - Terminal Marítimo Escuadrón - Oxiquim S.A.</fullName>
                </value>
                <value>
                    <fullName>1064 - Oxiquim Centro Sur Propios Externos - Oxiquim S.A.</fullName>
                </value>
                <value>
                    <fullName>1071 - Iquique -  Oxiquim S.A.</fullName>
                </value>
                <value>
                    <fullName>2031 - Quilicura Distribución - Dilox</fullName>
                </value>
                <value>
                    <fullName>2041 - Puerto Montt - Dilox</fullName>
                </value>
                <value>
                    <fullName>2061 - Escuadrón Distribución -  Dilox</fullName>
                </value>
                <value>
                    <fullName>2071 - Iquique Distribución -  Dilox</fullName>
                </value>
                <value>
                    <fullName>5001 - Terminal Marítimo Mejillones - TMM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Centro_de_Beneficio__c</fullName>
        <label>Centro de Beneficio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A7</fullName>
                </value>
                <value>
                    <fullName>A7R</fullName>
                </value>
                <value>
                    <fullName>BD3</fullName>
                </value>
                <value>
                    <fullName>BD6</fullName>
                </value>
                <value>
                    <fullName>G2</fullName>
                </value>
                <value>
                    <fullName>G3</fullName>
                </value>
                <value>
                    <fullName>R0</fullName>
                </value>
                <value>
                    <fullName>DI100</fullName>
                </value>
                <value>
                    <fullName>F7</fullName>
                </value>
                <value>
                    <fullName>F8</fullName>
                </value>
                <value>
                    <fullName>F3</fullName>
                </value>
                <value>
                    <fullName>F4</fullName>
                </value>
                <value>
                    <fullName>F5</fullName>
                </value>
                <value>
                    <fullName>F6</fullName>
                </value>
                <value>
                    <fullName>F11</fullName>
                </value>
                <value>
                    <fullName>MM11</fullName>
                </value>
                <value>
                    <fullName>MM4</fullName>
                </value>
                <value>
                    <fullName>B11</fullName>
                </value>
                <value>
                    <fullName>B7</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Producto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Producto</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Asiganciones de productos</relationshipLabel>
        <relationshipName>Asiganciones_de_productos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sociedad__c</fullName>
        <label>Sociedad</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BP01</fullName>
                </value>
                <value>
                    <fullName>BP02</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Asignación de producto</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Producto__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>ID Asignación de productos</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asignaciones de productos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>